--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     },
     "dependencies": {
         "@vanilla-extract/css": "^1.15.2",
+        "anime": "^0.1.2",
+        "animejs": "^3.2.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router": "^6.23.1",
