--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@vanilla-extract/css": "^1.15.2",
         "anime": "^0.1.2",
         "animejs": "^3.2.2",
+        "lottie-web": "^5.12.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router": "^6.23.1",
